--- a/views/pages/tr/okulkredisihesapla.html.twig
+++ b/views/pages/tr/okulkredisihesapla.html.twig
@@ -110,6 +110,8 @@ $(document).ready(function() {
 			  <h2>Sonuçlar</h2>
 			  <p><strong>Kredi: </strong> {{ toplamkredi }}</p>
 			  <p>Nasıl hesapladık?<br />
+			Ders: (ders notunuz * haftalık ders saati)
+			<br />
 			 {% for ders in dersler %}
 			 {{ ders }}
 			<br />
