--- a/views/pages/tr/okullarinkapanmasina.html.twig
+++ b/views/pages/tr/okullarinkapanmasina.html.twig
@@ -29,7 +29,7 @@ $(document).ready(function() {
 	  </div>
 
       <div class="hero-unit">
-        <h2><span id="yariyiltatiline">0</span>* sonra yarı yıl tatili başlıyor,</h2>
+        <h2><span id="yariyiltatiline">0</span>* sonra yarı yıl tatili,</h2>
         <h2><span id="senesonuna">0</span>* sonra yaz tatili başlıyor!</h2>
 
 		<div class="clearfix"></div>
