added meta properties for Facebook

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -5,6 +5,8 @@
     <title>{% block title %}{% endblock %}Fırat Batuhan İçöz</title>
     <meta name="description" content="{% block desc %}{% endblock %} - (c) Batuhan İçöz">
     <meta name="author" content="Fırat Batuhan İçöz">
+	<meta property="fb:app_id" content="250987194917493" />
+	<meta property="fb:admins" content="1234684607" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
