added few open graph tags

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -7,6 +7,13 @@
     <meta name="author" content="Fırat Batuhan İçöz">
 	<meta property="fb:app_id" content="250987194917493" />
 	<meta property="fb:admins" content="1234684607" />
+	<meta property="og:title" content="{% block title %}{% endblock %}Fırat Batuhan İçöz" />
+	<meta property="og:type" content="{% block og:type %}profile{% endblock %}" />
+
+	<meta property="og:first_name" content="Batuhan" />
+	<meta property="og:last_name" content="İçöz" />
+	<meta property="og:username" content="batuhanicoz" />
+	<meta property="og:gender" content="male" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
