--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -7,8 +7,8 @@
     <meta name="author" content="Fırat Batuhan İçöz">
 	<meta property="fb:app_id" content="250987194917493" />
 	<meta property="fb:admins" content="1234684607" />
-	<meta property="og:title" content="{% block og:title %}{% endblock %}Fırat Batuhan İçöz" />
-	<meta property="og:type" content="{% block og:type %}profile{% endblock %}" />
+	<meta property="og:title" content="{% block og_title %}{% endblock %}Fırat Batuhan İçöz" />
+	<meta property="og:type" content="{% block og_type %}profile{% endblock %}" />
 
 	<meta property="og:first_name" content="Batuhan" />
 	<meta property="og:last_name" content="İçöz" />
