--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -9,6 +9,7 @@
 	<meta property="fb:admins" content="1234684607" />
 	<meta property="og:title" content="{% block og_title %}{% endblock %}Fırat Batuhan İçöz" />
 	<meta property="og:type" content="{% block og_type %}profile{% endblock %}" />
+	<meta property="og:image" content="http://static.batu.me/assets/img/avatar.jpg" />
 
 	<meta property="og:first_name" content="Batuhan" />
 	<meta property="og:last_name" content="İçöz" />
