--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}Fırat Batuhan İçöz</title>
-    <meta name="description" content="{% block desc %}{% endblock %} - (c) Batuhan İçöz">
+    <meta name="description" content="{% block desc %}{{ app.translator.trans('desc') }}{% endblock %} - (c) Batuhan İçöz">
     <meta name="author" content="Fırat Batuhan İçöz">
 	<meta property="fb:app_id" content="250987194917493" />
 	<meta property="fb:admins" content="1234684607" />
 	<meta property="og:title" content="{% block og_title %}{% endblock %}Fırat Batuhan İçöz" />
 	<meta property="og:type" content="{% block og_type %}profile{% endblock %}" />
 	<meta property="og:image" content="http://static.batu.me/assets/img/avatar.jpg" />
+	<meta property="og:url" content="http://batuhanicoz.com{% if app.locale == "tr" %}.tr{% endif %}" />
 
 	<meta property="og:first_name" content="Batuhan" />
 	<meta property="og:last_name" content="İçöz" />
