--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -25,10 +25,7 @@
     <!-- Le styles -->
     <link href="http://static.batu.me/assets/css/bootstrap-1.3.0.min.css" rel="stylesheet">
     <style type="text/css">
-
-      body {
-        padding-top: 60px;
-      }
+      body { padding-top: 60px; }
     </style>
 
 	{% block add_to_header %}{% endblock %}
@@ -54,7 +51,7 @@
 
     <!-- Topbar
     ================================================== -->
-    <div class="topbar">
+    <div class="topbar bastagizle">
       <div class="topbar-inner">
         <div class="container">
           <h3><a href="http://batu.me/1">{{ app.translator.trans('l_batuhans') }}</a></h3>
@@ -101,7 +98,7 @@
 	
       {% block content %}{% endblock %}
       
-    <div class="container">
+    <div class="container bastagizle">
     	<footer>
         	<div class="row show-grid">
 			    <div class="span-two-thirds column">
@@ -113,10 +110,10 @@
 		  </div><!-- /row -->
 		</footer>
     </div>
+	<div id="fb-root"></div>
     <!-- Le javascript -->
     <script src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
     <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
-	<!-- google +1 button -->
 	<script type="text/javascript">
 	  (function() {
 	    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
@@ -124,7 +121,6 @@
 	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
 	  })();
 	</script>
-	<div id="fb-root"></div>
 	<script>(function(d, s, id) {
 	  var js, fjs = d.getElementsByTagName(s)[0];
 	  if (d.getElementById(id)) {return;}
@@ -132,7 +128,15 @@
 	  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=250987194917493";
 	  fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
-	 
+	
+	<!-- script src="http://static.batu.me/assets/javascript/MakeItBatuhans.js" type="text/javascript"></script -->
+	<script type="text/javascript">
+		$(".bastagizle").hide();
+		$("body").mousemove(function(e){
+			console.log(e);
+			$(".bastagizle").fadeIn();
+		});
+	</script>
 	{% block add_to_footer %}{% endblock %}
   </body>
 </html>
