--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -24,9 +24,6 @@
 
     <!-- Le styles -->
     <link href="http://static.batu.me/assets/css/bootstrap-1.3.0.min.css" rel="stylesheet">
-    <style type="text/css">
-      body { padding-top: 60px; }
-    </style>
 
 	{% block add_to_header %}{% endblock %}
 
@@ -48,26 +45,6 @@
   </head>
 
   <body>
-
-    <!-- Topbar
-    ================================================== -->
-    <div class="topbar bastagizle">
-      <div class="topbar-inner">
-        <div class="container">
-          <h3><a href="http://batu.me/1">{{ app.translator.trans('l_batuhans') }}</a></h3>
-          <ul class="nav">
-	      	<li{% block is_homepage %}{% endblock %}><a href="http://{{ app.domain }}/">{{ app.translator.trans('l_homepage') }}</a></li>
-	      	<li{% block is_about %}{% endblock %}><a href="http://{{ app.domain }}/{{ app.translator.trans('route_about') }}">{{ app.translator.trans('l_about_me') }}</a></li>
-	      	<li><a href="http://shareables.me">Shareables</a></li>
-	      	<li{% block is_contact %}{% endblock %}><a href="http://{{ app.domain }}/{{ app.translator.trans('route_contact') }}">{{ app.translator.trans('l_contact_me') }}</a></li>
-          </ul>
-          <ul class="nav secondary-nav">
-			<li></li>
-		  </ul>
-        </div>
-      </div>
-    </div>
-	<div class="topbar_break"></div>
 	
 	{% if app.domain == "batuhanicoz.com.tr" %}
 	<div class="container">
@@ -98,7 +75,7 @@
 	
       {% block content %}{% endblock %}
       
-    <div class="container bastagizle">
+    <div class="container hideatfirst">
     	<footer>
         	<div class="row show-grid">
 			    <div class="span-two-thirds column">
@@ -129,14 +106,29 @@
 	  fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
 	
-	<!-- script src="http://static.batu.me/assets/javascript/MakeItBatuhans.js" type="text/javascript"></script -->
 	<script type="text/javascript">
-		$(".bastagizle").hide();
-		$("body").mousemove(function(e){
-			console.log(e);
-			$(".bastagizle").fadeIn();
-		});
+	
+		var language = "en";
+		var bootstrap = 0;
+		var load_topbar_css = 0;
+		
+		(function() {
+		    function async_load(){
+		        var s = document.createElement('script');
+		        s.type = 'text/javascript';
+		        s.async = true;
+		        s.src = 'http://static.batu.me/assets/javascript/MakeItBatuhans.js';
+		        var x = document.getElementsByTagName('script')[0];
+		        x.parentNode.insertBefore(s, x);
+		    }
+		    if (window.attachEvent)
+		        window.attachEvent('onload', async_load);
+		    else
+		        window.addEventListener('load', async_load, false);
+		})();
+		
 	</script>
+	
 	{% block add_to_footer %}{% endblock %}
   </body>
 </html>
