--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -24,6 +24,9 @@
 
     <!-- Le styles -->
     <link href="http://static.batu.me/assets/css/bootstrap-1.3.0.min.css" rel="stylesheet">
+	<style>
+	body { padding-top:30px; }
+	</style>
 
 	{% block add_to_header %}{% endblock %}
 
@@ -126,7 +129,7 @@
 		    else
 		        window.addEventListener('load', async_load, false);
 		})();
-		
+				
 	</script>
 	
 	{% block add_to_footer %}{% endblock %}
