--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -111,7 +111,7 @@
 	
 	<script type="text/javascript">
 	
-		var language = "en";
+		var language = "{{ app.locale }}";
 		var bootstrap = 0;
 		var load_topbar_css = 0;
 		
